--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">View Work</a></li>
+								<li><a href="/map/">View Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="http://govhack.org/" target="_blank">GovHack</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
