--- a/map/index.html
+++ b/map/index.html
@@ -57,7 +57,8 @@
 		
 		<!--- Scripts -->
 		<script src="../assets/js/jquery.min.js"></script>
-		<script src="../assets/js/jquery.csv.min.js"></script>
+		<script src="../assets/js/d3.min.js"></script>
+		<script src="../assets/js/queue.min.js"></script>
 		<script src='https://npmcdn.com/@turf/turf/turf.min.js'></script> 
 		<script src="../assets/js/map.js"></script>
 	</body>
