Auto stash before merge of "master" and "origin/master"

--- a/map/index.html
+++ b/map/index.html
@@ -49,6 +49,18 @@
 						</div>
 					</div>
 				</div>
+				<div class="option-block">
+					<h3>Distance to Facilities</h3>
+					<div class="expandable-block">
+						<select name="distance" id="distance">
+							<option value="" disabled>Please select a distance</option>
+							<option value="1">1km</option>
+							<option value="2">2km</option>
+							<option value="5">5km</option>
+							<option value="10">10km</option>
+						</select>
+					</div>
+				</div>
 			</div>
 			<div id="map">
 				
