Update content on pages and scripts

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-diamond"></span>
+							<span class="icon fa-diamond"</span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1 class="site-title">The Aussie Dream Chaser</h1>
-								<p class="site-tagline">A GovHack project created by Team BOM, representing the Bureau of Metereology</p>
+								<p class="site-tagline">A GovHack project created by Team BOM, representing the Bureau of Meteorology</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="/map/">View Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="dfma/map/">View Project</a></li>
+								<li><a href="#about">Team Members</a></li>
 								<li><a href="http://govhack.org/" target="_blank">GovHack</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -43,8 +43,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>
-									Our tool aims to provide a concise summary for someone looking to move to a particular council in Australia, 
-									so it will help them evaluate whether or not an area will be able to provide them a slice of the Australian dream. 
+									This tool aims to provide a summary for someone looking to move to a particular area in Australia. It will help them evaluate 										whether or not an area will be able to provide a slice of their Australian dream... 
 								</p>
 							</article>
 
@@ -76,7 +75,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">Team BOM, representing the Bureau of Metereology for GovHack. Design: Erick Teowarang</a>.</p>
+						<p class="copyright">Team BOM, representing the Bureau of Meteorology for GovHack. Design: Erick Teowarang</a>.</p>
 					</footer>
 
 			</div>
