--- a/map/index.html
+++ b/map/index.html
@@ -33,7 +33,7 @@
 					<div class="expandable-block">
 						<div class="single-option">
 							<input type="checkbox" id="bbq-pit" name="bbq-pit">
-							<label for="bbq-pit">Public BBQ Spot</label>
+							<label for="bbq-pit">Public BBQ</label>
 						</div>
 						<div class="single-option">
 							<input type="checkbox" id="bball-court" name="bball-court">
@@ -41,7 +41,7 @@
 						</div>
 						<div class="single-option">
 							<input type="checkbox" id="public-park" name="public-park">
-							<label for="public-park">Public Parks</label>
+							<label for="public-park">Public Park</label>
 						</div>
 						<div class="single-option">
 							<input type="checkbox" id="food" name="food">
