Update CSS to fix errors and add logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-diamond"</span>
+							<img src="images/image1.png" alt="Team Logo" />
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -27,7 +27,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="dfma/map/">View Project</a></li>
+								<li><a href="map/">View Project</a></li>
 								<li><a href="#about">Team Members</a></li>
 								<li><a href="http://govhack.org/" target="_blank">GovHack</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -56,7 +56,7 @@
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">Team Members</h2>
 								<p>
 									Team BOM consists of:
 									
