Expand the option blocks.

--- a/map/index.html
+++ b/map/index.html
@@ -21,14 +21,14 @@
 				<div class="branding">
 					<h2>The Aussie Dream Chaser</h2>
 				</div>
-				<div class="option-block">
+				<div class="option-block expanded">
 					<h3>Home Address</h3>
 					<div class="expandable-block">
 						<input type="text" name="home-address" id="home-address" 
-						placeholder="Enter your address" onFocus="geolocate()" />
+						placeholder="Enter your address" onFocus="geolocate()" /class="expander">
 					</div>
 				</div>
-				<div class="option-block">
+				<div class="option-block expanded">
 					<h3>Selected Facilities</h3>
 					<div class="expandable-block">
 						<div class="single-option">
@@ -49,7 +49,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="option-block">
+				<div class="option-block expanded">
 					<h3>Distance to Facilities</h3>
 					<div class="expandable-block">
 						<select name="distance" id="distance">
