Update the Intro text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>
-									This tool aims to provide a summary for someone looking to move to a particular area in Australia. It will help them evaluate 										whether or not an area will be able to provide a slice of their Australian dream... 
+									So you know how there are so many great places in this beautiful country of ours but it's hard to find the one that's just right 									for you? 
+									Well what we do is mash Australia’s recreation facilities into a single overlapping data set to meet this problem. 
+									In fact, our product ‘The Aussie Dream Chaser’ allows you to find your own dream Australian haven.
+
 								</p>
 							</article>
 
