Pushing changes to checkbox interactivity

--- a/map/index.html
+++ b/map/index.html
@@ -21,43 +21,51 @@
 				<div class="branding">
 					<h2>The Aussie Dream Chaser</h2>
 				</div>
-				<div class="option-block">
+				<div class="option-block expanded">
 					<h3>Home Address</h3>
 					<div class="expandable-block">
 						<input type="text" name="home-address" id="home-address" 
 						placeholder="Enter your address" onFocus="geolocate()" />
 					</div>
 				</div>
-				<div class="option-block">
+				<div class="option-block expanded">
 					<h3>Selected Facilities</h3>
 					<div class="expandable-block">
 						<div class="single-option">
-							<input type="checkbox" id="bbq-pit" name="bbq-pit">
+							<input type="checkbox" id="bbq-pit" name="bbq-pit" checked>
 							<label for="bbq-pit">Public BBQ</label>
 						</div>
 						<div class="single-option">
-							<input type="checkbox" id="bball-court" name="bball-court">
+							<input type="checkbox" id="bball-court" name="bball-court" checked>
 							<label for="bball-court">Basketball Court</label>
 						</div>
 						<div class="single-option">
-							<input type="checkbox" id="public-park" name="public-park">
+							<input type="checkbox" id="public-park" name="public-park" checked>
 							<label for="public-park">Public Park</label>
 						</div>
 						<div class="single-option">
-							<input type="checkbox" id="food" name="food">
-							<label for="food">Cafe/Restaurant</label>
+							<input type="checkbox" id="dogpark" name="dogpark" checked>
+							<label for="dogpark">Dog Park</label>
+						</div>
+						<div class="single-option">
+							<input type="checkbox" id="aquapark" name="aquapark" checked>
+							<label for="aquapark">Aquatic Park</label>
+						</div>
+						<div class="single-option">
+							<input type="checkbox" id="skatepark" name="skatepark" checked>
+							<label for="skatepark">Skate Park</label>
 						</div>
 					</div>
 				</div>
-				<div class="option-block">
+				<div class="option-block expanded">
 					<h3>Distance to Facilities</h3>
 					<div class="expandable-block">
 						<select name="distance" id="distance">
 							<option value="" disabled>Please select a distance</option>
-							<option value="1">1km</option>
-							<option value="2">2km</option>
-							<option value="5">5km</option>
-							<option value="10">10km</option>
+							<option value="100">100m</option>
+							<option value="500">500m</option>
+							<option value="1000">1km</option>
+							<option value="2000">2km</option>
 						</select>
 					</div>
 				</div>
