Create buffers around selected home address corresponding to the address

--- a/map/index.html
+++ b/map/index.html
@@ -14,6 +14,25 @@
 		  integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
 		  crossorigin=""></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuMEayWUlqFRZvLZEimLkhb2CxSRi8x2g&libraries=places"></script>
+		<script type="text/javascript">
+			// Bias the autocomplete object to the user's geographical location,
+		  // as supplied by the browser's 'navigator.geolocation' object.
+		  function geolocate() {
+		    if (navigator.geolocation) {
+		      navigator.geolocation.getCurrentPosition(function(position) {
+		        var geolocation = {
+		          lat: position.coords.latitude,
+		          lng: position.coords.longitude
+		        };
+		        var circle = new google.maps.Circle({
+		          center: geolocation,
+		          radius: position.coords.accuracy
+		        });
+		        autocomplete.setBounds(circle.getBounds());
+		      });
+		    }
+		  }
+		</script>
 	</head>
 	<body>
 		<div id="mapwrapper">
@@ -59,9 +78,9 @@
 				</div>
 				<div class="option-block expanded">
 					<h3>Distance to Facilities</h3>
-					<div class="expandable-block">
+					<div class="expandable-block distance-block">
 						<select name="distance" id="distance">
-							<option value="" disabled>Please select a distance</option>
+							<option value="" disabled selected>Please select a distance</option>
 							<option value="100">100m</option>
 							<option value="500">500m</option>
 							<option value="1000">1km</option>
