--- a/map/index.html
+++ b/map/index.html
@@ -99,7 +99,7 @@
 		<script src="../assets/js/jquery.min.js"></script>
 		<script src="../assets/js/d3.min.js"></script>
 		<script src="../assets/js/queue.min.js"></script>
-		<script src='https://npmcdn.com/@turf/turf/turf.min.js'></script> 
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/Turf.js/4.5.2/turf.min.js'></script> 
 		<script src="../assets/js/map.js"></script>
 	</body>
 </html>
